--- a/ExpressApp/login.html
+++ b/ExpressApp/login.html
@@ -231,7 +231,7 @@ span.psw {
 
 <div id="id02" class="modalRegister">
   <!-- //'username', 'password', 'email', and 'display_name' -->
-  <form class="modal-content animate" action="/" method="POST">
+  <form class="modal-content animate" action="/register" method="POST">
       <div class="imgcontainer">
         <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
         <img src="turtle.png" alt="Avatar" class="avatar">
